Bug fixes, existential types, fancy web based editor, report and presentation (#7)
* clean up specs a bit

* Add a note on transition systems

* Flesh out specs with more exposition.

* Small fixes to big step semantics for programs

* small cleanup

* Update project overview in readme and flesh out most of the exposition, except for metatheoretic discussion

* Small adjustments to wording

* Testing and bug fixing

* More testing and fixing. Local let bindings are causing problems with typechecking :(

* Fix local let bindings and make cantor's theorem work. Also added pdf and dvi files to .gitignore

* Delete presentation.pdf

* Delete spec.pdf

* Add syntactic sugar inspired by Lean

* update readme with a new sample proof

* Implement optional annotations for def and let. Also add some proofs involving disjunction.

* Remove pdf files from gitignore

* Save source string when parsing

* Improve specs and try implementing destructuring for pairs

* Flesh out specs for existentials and implement them

* Update dependencies

* Fancy new syntax for existential elimination. Also updated specs.

* Tried to implement repl (#6)

* attempted repl

* pass both ctx and fix test

* implement quit and restart and not exit on error for repl

* try implement interface for js

* remove io code

* add export

* fix

* fix

* export real

* overwrite bc.js

* try with wrap

* refactor js_run_repl

* convert js types

* ignore vscode

* wrap result with success flag

* remove reset

* add back reset

* update

* ace web editor

Co-authored-by: aellym0 <77778907+aellym0@users.noreply.github.com>

* Better error reporting and some fixes.

* Fix normalization of existentials

* Work on presentation

* Update readme

Co-authored-by: Abdul Haliq <liqo12@hotmail.com>

--- a/latex/preamble.tex
+++ b/latex/preamble.tex
@@ -1,6 +1,6 @@
 \usepackage{amsmath, amssymb, amsthm, thmtools, thm-restate, tikz, graphicx,
   hyperref, cleveref, comment, expl3, xparse, ebproof, enumitem, xcolor,
-  stmaryrd, backnaur, verbatim}
+  stmaryrd, backnaur, verbatim, todonotes}
 
 \usepackage[titlenumbered, ruled]{algorithm2e}
 \usetikzlibrary{shapes.geometric}
@@ -80,8 +80,6 @@
 \newcommand{\Z}{\mathbb{Z}}
 \newcommand{\R}{\mathbb{R}}
 
-\newcommand{\fact}{\mathbf{fact}}
-
 % Partial function arrow
 % https://math.stackexchange.com/questions/742614/notation-for-partial-function-set
 \newcommand{\pto}{\multimap\mspace{-2mu} \to}
@@ -103,6 +101,10 @@
 \DeclareMathOperator{\inl}{inl}
 \DeclareMathOperator{\inr}{inr}
 \DeclareMathOperator{\match}{match}
+\DeclareMathOperator{\existselim}{exists\_elim}
+
+\DeclareMathOperator{\hnf}{hnf}
+\DeclareMathOperator{\neutral}{neutral}
 
 % \DeclareMathOperator{\lett}{let}
 % \DeclareMathOperator{\inn}{in}
